PgTypeHelper fixes.